2003-07-07  Jean-Louis Martineau <martineau@iro.umontreal.ca>

* changer-src/chg-chio.pl.in: Fix next/prev command.

2003-07-06  Thomas Hepper <th@ant.han.de>
	* changer-src/chg-scsi.c: Added debug Information to see which sg
	 version is used
	* changer-src/scsi-linux.c: Added debug Information to see which sg
	version is used.
	Removed check if an data packet is larger than 4096 byte.

2003-07-02  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* client-src/client_util.c (add_include): Count include with 2 /,
	  Fix descriptor leak.

2003-06-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* Amanda 2.4.4p1 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.4.4p1).


2003-06-25  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Fix print spacing for idle dumpers.

2003-06-20  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* tape-src/tapetype.c: Avoid a numerical overflow for large tape
	  capacities.

2003-06-20  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Fix to failed tape.

2003-06-18  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c (delay_dumps): Delay not delay forced full
	  before forced full.

2003-06-18  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* changer-src/chg-zd-mtx.sh.in: Log the changer file used.

2003-06-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/holding.c: Skip lost+found directories on holding disks.

2003-06-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverify.sh.in: Do not advance to next tape.

2003-06-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	patch by Eric Siegerman <eric_97@pobox.com>

	* server-src/planner.c: Make promote_hills() honour maxpromotedays.

2003-06-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>
